--- a/실습10.인터넷연결.md
+++ b/실습10.인터넷연결.md
@@ -1,4 +1,5 @@
-네트워크 구성인 **[Cloud(인터넷)] - [ISR 1941 라우터] - [Catalyst 2960 스위치] - [PC]** 시나리오에 맞춘 핵심 설정 파일입니다. 강의 교재 형식으로 다시 정리해 드립니다.
+# 인터넷 연결
+**[Cloud(인터넷)] - [ISR 1941 라우터] - [Catalyst 2960 스위치] - [PC]** 
 
 ---
 
