--- a/실습050.vlan연결설정.md
+++ b/실습050.vlan연결설정.md
@@ -1,135 +1,136 @@
-## 단일 L3 스위치 기반 VLAN 구성 및 스위치 간 연결
+# vlan 연결 설정
 
- Cisco 3560 L3 스위치를 Core로 두고, 하위에 2960 L2 스위치 2대를 연결하여 VLAN 10과 VLAN 20으로 네트워크를 격리하는 구성
-
----
-
-### 1. 네트워크 구성 개요
-
-* **Core Switch (L3):** Cisco 3560 (VLAN 간 라우팅 및 게이트웨이 역할)
-* **Access Switch (L2):** Cisco 2960 (2대, 각 VLAN 전용 연결)
-* **VLAN 정보:**
-* **VLAN 10:** 192.168.10.0/24 (Gateway: 192.168.10.1)
-* **VLAN 20:** 192.168.20.0/24 (Gateway: 192.168.20.1)
-
-
-* **연결 포트:**
-* 3560 (Fa0/1) <---> 2960-A (Fa0/1) [Trunk]
-* 3560 (Fa0/2) <---> 2960-B (Fa0/1) [Trunk]
-* 2960-A (Fa0/2) <---> PC 1 [Access VLAN 10]
-* 2960-B (Fa0/2) <---> PC 2 [Access VLAN 20]
-
-
+**L3 스위치(3560)**를 중심(Core)에 두고, 하단에 두 대의 **L2 스위치(2960)**를 연결하여 VLAN별로 네트워크를 분리하는 계층 구조입니다. 
 
 ---
 
-### 2. Core Switch (3560) 설정
+## 장비별 네트워크 IP 할당 요약
 
-L3 스위치에서는 VLAN 생성, 트렁크 포트 설정, 그리고 서로 다른 VLAN 간 통신을 위한 **IP Routing** 활성화가 핵심입니다.
+| 장비명 | 인터페이스 | VLAN | IP 주소 | 서브넷 마스크 | 기본 게이트웨이 |
+| --- | --- | --- | --- | --- | --- |
+| **L3 스위치 (3560)** | SVI (Vlan 10) | 10 | 192.168.10.1 | 255.255.255.0 | - |
+| **L3 스위치 (3560)** | SVI (Vlan 20) | 20 | 192.168.20.1 | 255.255.255.0 | - |
+| **L2 스위치 1 (2960)** | SVI (Vlan 10) | 10 | 192.168.10.2 | 255.255.255.0 | 192.168.10.1 |
+| **L2 스위치 2 (2960)** | SVI (Vlan 20) | 20 | 192.168.20.2 | 255.255.255.0 | 192.168.20.1 |
+| **PC 1** | FastEthernet 0 | 10 | **192.168.10.10** | **255.255.255.0** | **192.168.10.1** |
+| **PC 2** | FastEthernet 0 | 20 | **192.168.20.10** | **255.255.255.0** | **192.168.20.1** |
+
+---
+
+## 1. L3 스위치 (3560) 설정
+
+3560은 서로 다른 VLAN 간의 데이터를 넘겨주는 '라우팅' 핵심 장비입니다.
 
 ```bash
-Switch> enable
-Switch# configure terminal
-Switch(config)# hostname Core-3560
+! --- 라우팅 기능 활성화 (가장 중요) ---
+ip routing
 
-! 1. VLAN 생성
-Core-3560(config)# vlan 10
-Core-3560(config-vlan)# name Sales
-Core-3560(config-vlan)# exit
-Core-3560(config)# vlan 20
-Core-3560(config-vlan)# name Engineering
-Core-3560(config-vlan)# exit
+! --- VLAN 생성 및 이름 지정 ---
+vlan 10
+ name SALES
+vlan 20
+ name TECH
 
-! 2. L3 라우팅 활성화 (VLAN 간 통신 허용)
-Core-3560(config)# ip routing
+! --- VLAN별 게이트웨이(SVI) 설정 ---
+interface Vlan10
+ ip address 192.168.10.1 255.255.255.0
+ no shutdown
 
-! 3. SVI(Switched Virtual Interface) 설정 - 각 VLAN의 게이트웨이
-Core-3560(config)# interface vlan 10
-Core-3560(config-if)# ip address 192.168.10.1 255.255.255.0
-Core-3560(config-if)# no shutdown
-Core-3560(config-if)# exit
+interface Vlan20
+ ip address 192.168.20.1 255.255.255.0
+ no shutdown
 
-Core-3560(config)# interface vlan 20
-Core-3560(config-if)# ip address 192.168.20.1 255.255.255.0
-Core-3560(config-if)# no shutdown
-Core-3560(config-if)# exit
-
-! 4. 트렁크 포트 설정 (2960 연결용)
-! 3560은 encapsulation dot1q 명령어를 먼저 입력해야 트렁크 설정이 가능함
-Core-3560(config)# interface range fastEthernet 0/1 - 2
-Core-3560(config-if-range)# switchport trunk encapsulation dot1q
-Core-3560(config-if-range)# switchport mode trunk
-Core-3560(config-if-range)# exit
+! --- 하단 L2 스위치 연결용 트렁크 포트 설정 ---
+interface range GigabitEthernet0/1 - 2
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
 
 ```
 
 ---
 
-### 3. Access Switch A (2960-A) 설정
+## 2. L2 스위치 1 (2960 - Sales 부서) 설정
 
-VLAN 10을 사용하는 첫 번째 L2 스위치 설정입니다.
+VLAN 10번 데이터를 처리하며 PC 1이 연결됩니다.
 
 ```bash
-Switch> enable
-Switch# configure terminal
-Switch(config)# hostname Access-2960A
+vlan 10
+ name SALES
 
-! 1. VLAN 생성
-Access-2960A(config)# vlan 10
-Access-2960A(config-vlan)# exit
+! --- 관리용 IP 및 게이트웨이 ---
+interface Vlan10
+ ip address 192.168.10.2 255.255.255.0
+ no shutdown
+exit
+ip default-gateway 192.168.10.1
 
-! 2. 업링크 포트 설정 (Core 스위치 연결)
-Access-2960A(config)# interface fastEthernet 0/1
-Access-2960A(config-if)# switchport mode trunk
-Access-2960A(config-if)# exit
+! --- 상단 L3 스위치 연결 (Trunk) ---
+interface GigabitEthernet0/1
+ switchport mode trunk
 
-! 3. PC 연결 포트 설정 (VLAN 10 할당)
-Access-2960A(config)# interface fastEthernet 0/2
-Access-2960A(config-if)# switchport mode access
-Access-2960A(config-if)# switchport access vlan 10
-Access-2960A(config-if)# spanning-tree portfast
-Access-2960A(config-if)# exit
+! --- PC 1 연결 (Access) ---
+interface FastEthernet0/1
+ switchport mode access
+ switchport access vlan 10
+ spanning-tree portfast
 
 ```
 
 ---
 
-### 4. Access Switch B (2960-B) 설정
+## 3. L2 스위치 2 (2960 - Tech 부서) 설정
 
-VLAN 20을 사용하는 두 번째 L2 스위치 설정입니다.
+VLAN 20번 데이터를 처리하며 PC 2가 연결됩니다.
 
 ```bash
-Switch> enable
-Switch# configure terminal
-Switch(config)# hostname Access-2960B
+vlan 20
+ name TECH
 
-! 1. VLAN 생성
-Access-2960B(config)# vlan 20
-Access-2960B(config-vlan)# exit
+! --- 관리용 IP 및 게이트웨이 ---
+interface Vlan20
+ ip address 192.168.20.2 255.255.255.0
+ no shutdown
+exit
+ip default-gateway 192.168.20.1
 
-! 2. 업링크 포트 설정 (Core 스위치 연결)
-Access-2960B(config)# interface fastEthernet 0/1
-Access-2960B(config-if)# switchport mode trunk
-Access-2960B(config-if)# exit
+! --- 상단 L3 스위치 연결 (Trunk) ---
+interface GigabitEthernet0/1
+ switchport mode trunk
 
-! 3. PC 연결 포트 설정 (VLAN 20 할당)
-Access-2960B(config)# interface fastEthernet 0/2
-Access-2960B(config-if)# switchport mode access
-Access-2960B(config-if)# switchport access vlan 20
-Access-2960B(config-if)# spanning-tree portfast
-Access-2960B(config-if)# exit
+! --- PC 2 연결 (Access) ---
+interface FastEthernet0/1
+ switchport mode access
+ switchport access vlan 20
+ spanning-tree portfast
 
 ```
 
 ---
 
-### 5. PC 네트워크 설정 및 확인
+## 4. PC 최종 설정 및 통신 테스트
 
-| 장비 | IP 주소 | 서브넷 마스크 | 기본 게이트웨이 |
-| --- | --- | --- | --- |
-| **PC 1** | 192.168.10.10 | 255.255.255.0 | 192.168.10.1 |
-| **PC 2** | 192.168.20.10 | 255.255.255.0 | 192.168.20.1 |
+### PC 1 설정 (VLAN 10 소속)
 
-> **실전 팁:** > 3560 스위치에서 `ip routing` 명령어를 생략하면 VLAN 간의 통신(Inter-VLAN Routing)이 이루어지지 않습니다. 설정 후 반드시 `show ip route` 명령어로 라우팅 테이블이 생성되었는지 확인하십시오.
+* **IP Address:** 192.168.10.10
+* **Subnet Mask:** 255.255.255.0
+* **Default Gateway:** 192.168.10.1
 
-Next: VLAN 통신 문제 해결 및 트러블슈팅 조치 방법
+### PC 2 설정 (VLAN 20 소속)
+
+* **IP Address:** 192.168.20.10
+* **Subnet Mask:** 255.255.255.0
+* **Default Gateway:** 192.168.20.1
+
+---
+
+### 실전 확인 팁
+
+모든 설정이 완료된 후 PC 1에서 PC 2로 `ping 192.168.20.10`을 수행합니다. 3560에서 `ip routing` 명령어가 빠졌거나, PC의 게이트웨이 주소가 틀리면 통신이 실패하므로 가장 먼저 확인해야 합니다.
+
+Next: L3 스위치 라우팅 테이블 확인 및 트러블슈팅
+
+* 3560 IP 할당
+* 2960 관리 IP
+* PC 고정 IP 설정
+* Inter-VLAN 통신
+* 게이트웨이 설정 확인
