--- a/실습050.vlan연결설정.md
+++ b/실습050.vlan연결설정.md
@@ -27,9 +27,9 @@ ip routing
 
 ! --- VLAN 생성 및 이름 지정 ---
 vlan 10
- name SALES
+ # name SALES
 vlan 20
- name TECH
+ # name TECH
 
 ! --- VLAN별 게이트웨이(SVI) 설정 ---
 interface Vlan10
@@ -42,70 +42,12 @@ interface Vlan20
 
 ! --- 하단 L2 스위치 연결용 트렁크 포트 설정 ---
 interface range GigabitEthernet0/1 - 2
- switchport trunk encapsulation dot1q
- switchport mode trunk
+ # switchport trunk encapsulation dot1q
+ # switchport mode trunk
 
 ```
 
----
 
-## 2. L2 스위치 1 (2960 - Sales 부서) 설정
-
-VLAN 10번 데이터를 처리하며 PC 1이 연결됩니다.
-
-```bash
-vlan 10
- name SALES
-
-! --- 관리용 IP 및 게이트웨이 ---
-interface Vlan10
- ip address 192.168.10.2 255.255.255.0
- no shutdown
-exit
-ip default-gateway 192.168.10.1
-
-! --- 상단 L3 스위치 연결 (Trunk) ---
-interface GigabitEthernet0/1
- switchport mode trunk
-
-! --- PC 1 연결 (Access) ---
-interface FastEthernet0/1
- switchport mode access
- switchport access vlan 10
- spanning-tree portfast
-
-```
-
----
-
-## 3. L2 스위치 2 (2960 - Tech 부서) 설정
-
-VLAN 20번 데이터를 처리하며 PC 2가 연결됩니다.
-
-```bash
-vlan 20
- name TECH
-
-! --- 관리용 IP 및 게이트웨이 ---
-interface Vlan20
- ip address 192.168.20.2 255.255.255.0
- no shutdown
-exit
-ip default-gateway 192.168.20.1
-
-! --- 상단 L3 스위치 연결 (Trunk) ---
-interface GigabitEthernet0/1
- switchport mode trunk
-
-! --- PC 2 연결 (Access) ---
-interface FastEthernet0/1
- switchport mode access
- switchport access vlan 20
- spanning-tree portfast
-
-```
-
----
 
 ## 4. PC 최종 설정 및 통신 테스트
 
