--- a/실습050.vlan연결설정.md
+++ b/실습050.vlan연결설정.md
@@ -10,8 +10,6 @@
 | --- | --- | --- | --- | --- | --- |
 | **L3 스위치 (3560)** | SVI (Vlan 10) | 10 | 192.168.10.1 | 255.255.255.0 | - |
 | **L3 스위치 (3560)** | SVI (Vlan 20) | 20 | 192.168.20.1 | 255.255.255.0 | - |
-| **L2 스위치 1 (2960)** | SVI (Vlan 10) | 10 | 192.168.10.2 | 255.255.255.0 | 192.168.10.1 |
-| **L2 스위치 2 (2960)** | SVI (Vlan 20) | 20 | 192.168.20.2 | 255.255.255.0 | 192.168.20.1 |
 | **PC 1** | FastEthernet 0 | 10 | **192.168.10.10** | **255.255.255.0** | **192.168.10.1** |
 | **PC 2** | FastEthernet 0 | 20 | **192.168.20.10** | **255.255.255.0** | **192.168.20.1** |
 
@@ -19,19 +17,35 @@
 
 ## 1. L3 스위치 (3560) 설정
 
-3560은 서로 다른 VLAN 간의 데이터를 넘겨주는 '라우팅' 핵심 장비입니다.
+3560 L3 스위치에서 기본 시스템 설정과 유휴 포트들을 제외하고, 강사님이 통신을 위해 **직접 입력한 핵심 명령어들만 한곳에 모은 최종 설정본**입니다. 강의 교재의 '구성 스크립트' 섹션으로 바로 활용하시기 바랍니다.
+
+---
+
+## 3560 Config 
 
 ```bash
-! --- 라우팅 기능 활성화 (가장 중요) ---
+! --- [1] L3 라우팅 기능 활성화 ---
 ip routing
 
-! --- VLAN 생성 및 이름 지정 ---
+! --- [2] VLAN 10 설정 및 PC 1 연결 포트 (Fa0/1) ---
 vlan 10
- # name SALES
-vlan 20
- # name TECH
+exit
+interface FastEthernet0/1
+! switchport mode access
+  switchport access vlan 10
+! spanning-tree portfast
+ exit
 
-! --- VLAN별 게이트웨이(SVI) 설정 ---
+! --- [3] VLAN 20 설정 및 PC 2 연결 포트 (Fa0/2) ---
+vlan 20
+exit
+interface FastEthernet0/2
+! switchport mode access
+ switchport access vlan 20
+! spanning-tree portfast
+ exit
+
+! --- [4] 각 VLAN별 게이트웨이(SVI) IP 할당 ---
 interface Vlan10
  ip address 192.168.10.1 255.255.255.0
  no shutdown
@@ -40,13 +54,32 @@ interface Vlan20
  ip address 192.168.20.1 255.255.255.0
  no shutdown
 
-! --- 하단 L2 스위치 연결용 트렁크 포트 설정 ---
-interface range GigabitEthernet0/1 - 2
- # switchport trunk encapsulation dot1q
- # switchport mode trunk
-
 ```
 
+---
+
+### 구성 분석 및 검증 포인트
+
+1. **`ip routing`**: 이 명령어가 빠지면 VLAN 10과 20은 절대 서로 통신할 수 없습니다. L3 스위치를 라우터로 변신시키는 핵심 스위치입니다.
+2. **`switchport mode access`**: PC가 연결된 포트임을 명시하여 보안과 효율성을 높였습니다.
+3. **`spanning-tree portfast`**: PC 연결 시 리스닝/러닝 단계를 생략하고 즉시 통신이 가능하게 합니다. (허브 연결 시에도 유용합니다.)
+4. **`interface Vlan`**: 물리 포트가 아닌 가상 인터페이스에 IP를 주어 각 네트워크의 '대문(Gateway)' 역할을 하게 합니다.
+
+---
+
+### 실전 팁: 빠르게 설정 확인하기
+
+설정 모드에서 나가지 않고 위 내용이 잘 들어갔는지 한 번에 확인하려면 아래 필터링 명령어를 사용하세요.
+
+* **명령어:** `do sh run | include ip routing|vlan|address|access|portfast`
+
+Next: `show ip route` 결과를 통한 라우팅 테이블 생성 확인
+
+* ip routing 활성화
+* Access Port 할당
+* SVI IP 설정
+* spanning-tree portfast
+* no shutdown 확인
 
 
 ## 4. PC 최종 설정 및 통신 테스트
