--- a/실습050.vlan연결설정.md
+++ b/실습050.vlan연결설정.md
@@ -31,28 +31,26 @@ ip routing
 vlan 10
 exit
 interface FastEthernet0/1
-! switchport mode access
   switchport access vlan 10
-! spanning-tree portfast
  exit
 
 ! --- [3] VLAN 20 설정 및 PC 2 연결 포트 (Fa0/2) ---
 vlan 20
 exit
 interface FastEthernet0/2
-! switchport mode access
  switchport access vlan 20
-! spanning-tree portfast
  exit
 
 ! --- [4] 각 VLAN별 게이트웨이(SVI) IP 할당 ---
 interface Vlan10
  ip address 192.168.10.1 255.255.255.0
- no shutdown
+exit
 
 interface Vlan20
  ip address 192.168.20.1 255.255.255.0
- no shutdown
+exit
+
+#wr
 
 ```
 
