--- a/실습050.vlan연결설정.md
+++ b/실습050.vlan연결설정.md
@@ -21,26 +21,26 @@
 
 ---
 
-## 3560 Config 
+## 3560 Config 쉬운 설정
 
 ```bash
-! --- [1] L3 라우팅 기능 활성화 ---
+
 ip routing
 
 
-! --- [2] VLAN 10 설정 및 PC 1 연결 포트 (Fa0/1) ---
+
 vlan 10
 interface FastEthernet0/1
   switchport access vlan 10
 
 
-! --- [3] VLAN 20 설정 및 PC 2 연결 포트 (Fa0/2) ---
+
 vlan 20
 interface FastEthernet0/2
  switchport access vlan 20
 
 
-! --- [4] 각 VLAN별 게이트웨이(SVI) IP 할당 ---
+
 interface Vlan10
  ip address 192.168.10.1 255.255.255.0
 
@@ -54,7 +54,41 @@ interface Vlan20
 ```
 
 ---
+<모범 답안>
 
+```bash
+! --- [1] L3 라우팅 기능 활성화 ---
+ip routing
+
+! --- [2] VLAN 10 설정 및 PC 1 연결 포트 (Fa0/1) ---
+vlan 10
+exit
+interface FastEthernet0/1
+ switchport mode access
+ switchport access vlan 10
+ spanning-tree portfast
+ exit
+
+! --- [3] VLAN 20 설정 및 PC 2 연결 포트 (Fa0/2) ---
+vlan 20
+exit
+interface FastEthernet0/2
+ switchport mode access
+ switchport access vlan 20
+ spanning-tree portfast
+ exit
+
+! --- [4] 각 VLAN별 게이트웨이(SVI) IP 할당 ---
+interface Vlan10
+ ip address 192.168.10.1 255.255.255.0
+ no shutdown
+
+interface Vlan20
+ ip address 192.168.20.1 255.255.255.0
+ no shutdown
+
+#wr
+```
 ### 구성 분석 및 검증 포인트
 
 1. **`ip routing`**: 이 명령어가 빠지면 VLAN 10과 20은 절대 서로 통신할 수 없습니다. L3 스위치를 라우터로 변신시키는 핵심 스위치입니다.
