--- a/실습050.vlan연결설정.md
+++ b/실습050.vlan연결설정.md
@@ -57,6 +57,8 @@ interface Vlan20
 <모범 답안>
 
 ```bash
+> en
+# conf t
 ! --- [1] L3 라우팅 기능 활성화 ---
 ip routing
 
@@ -82,11 +84,13 @@ interface FastEthernet0/2
 interface Vlan10
  ip address 192.168.10.1 255.255.255.0
  no shutdown
+exit
 
 interface Vlan20
  ip address 192.168.20.1 255.255.255.0
  no shutdown
-
+exit
+exit
 #wr
 ```
 ### 구성 분석 및 검증 포인트
