--- a/실습012.로드밸런싱1.md
+++ b/실습012.로드밸런싱1.md
@@ -71,7 +71,7 @@ interface Vlan10
  ip address 192.168.10.2 255.255.255.0
  standby 10 ip 192.168.10.1
  standby 10 priority 110                  # VLAN 10의 대장
- standby 10 preempt
+ standby 10 preempt                       # 자동회수
 !
 interface Vlan20
  ip address 192.168.20.2 255.255.255.0
