--- a/실습012.로드밸런싱1.md
+++ b/실습012.로드밸런싱1.md
@@ -37,7 +37,7 @@ interface GigabitEthernet0/2
  no switchport
  ip address 172.16.2.1 255.255.255.252  # 연결: Dist-B
 !
-interface GigabitEthernet0/3
+interface FastEthernet0/1
  no switchport
  ip address 192.168.1.1 255.255.255.0    # PC1 게이트웨이
 !
@@ -65,6 +65,7 @@ interface GigabitEthernet0/1
  ip address 172.16.1.2 255.255.255.252
 !
 interface GigabitEthernet0/2
+ switchport trunk encapsulation dot1q
  switchport mode trunk                   # 하단 Access-L2 연결
 !
 interface Vlan10
@@ -100,6 +101,7 @@ interface GigabitEthernet0/1
  ip address 172.16.2.2 255.255.255.252
 !
 interface GigabitEthernet0/2
+ switchport trunk encapsulation dot1q
  switchport mode trunk
 !
 interface Vlan10
