--- a/실습200.인터넷-Nat.md
+++ b/실습200.인터넷-Nat.md
@@ -90,5 +90,89 @@ ip route 0.0.0.0 0.0.0.0 172.16.1.1
 4. **NAT 확인:** 라우터에서 `show ip nat translations` 명령을 통해 사설 IP가 공인 IP로 변환되어 찍히는지 확인.
 
 ---
+요청하신 내용을 바탕으로 깃허브(Markdown)에 바로 적용 가능한 강의 교재 형식으로 작성하였습니다.
 
+---
+
+## PAT(Port Address Translation)의 이해와 설정
+
+네트워크 주소 변환(NAT) 기술 중 가장 널리 쓰이는 방식은 **PAT(Port Address Translation)**입니다. 시스코 명령어로 `overload` 옵션을 사용하는 이 기술은 하나의 공인 IP 주소를 여러 대의 내부 호스트가 공유할 수 있게 해줍니다.
+
+### 1. 명령어의 구조 분석
+
+`ip nat inside source list 1 interface GigabitEthernet0/0 overload`
+
+이 한 줄의 명령어에는 다음과 같은 핵심 요소들이 포함되어 있습니다.
+
+* **`ip nat inside`**: 내부(Inside) 네트워크에서 외부(Outside)로 나가는 패킷을 변환 대상으로 지정합니다.
+* **`source list 1`**: 변환할 대상(Source)을 **ACL(Access Control List) 1번**에 정의된 호스트들로 제한합니다.
+* **`interface GigabitEthernet0/0`**: 내부 사설 IP가 변환되어 나갈 때 사용할 **공인 IP 주소**가 할당된 인터페이스를 지정합니다.
+* **`overload`**: 핵심 키워드입니다. 여러 내부 IP가 하나의 공인 IP를 사용할 때, **Port 번호**를 이용해 각각의 세션을 구분(PAT)하도록 설정합니다.
+
+---
+
+### 2. 작동 원리: Port를 이용한 다중화
+
+일반적인 Dynamic NAT는 공인 IP 풀(Pool)에 있는 주소와 내부 IP를 1:1로 매핑합니다. 하지만 `overload`를 사용하면 다음과 같이 동작합니다.
+
+| 내부 호스트 (Source IP) | 내부 포트 | 변환된 공인 IP (Gi0/0) | 변환된 포트 | 목적지 (Destination) |
+| --- | --- | --- | --- | --- |
+| 192.168.10.10 | 1500 | 203.0.113.1 | **1500** | Google (80) |
+| 192.168.10.11 | 1500 | 203.0.113.1 | **1501** | Naver (80) |
+
+> **💡 핵심 포인트**: 내부 포트 번호가 중복되더라도 NAT 테이블에서 외부로 나가는 포트 번호를 임의로 변경하여 관리하므로, 하나의 공인 IP로 수천 개의 커넥션을 처리할 수 있습니다.
+
+---
+
+### 3. 실전 설정 단계 (Full Config)
+
+PAT를 완벽하게 구동하기 위해서는 인터페이스 방향 설정과 ACL 정의가 반드시 선행되어야 합니다.
+
+```bash
+! 1. 변환 대상 정의 (Inside Local 주소 범위)
+access-list 1 permit 192.168.10.0 0.0.0.255
+
+! 2. 외부 인터페이스 지정 및 PAT 활성화
+ip nat inside source list 1 interface GigabitEthernet0/0 overload
+
+! 3. 각 인터페이스에 NAT 방향 적용
+interface GigabitEthernet0/1
+ description LAN_Inside
+ ip address 192.168.10.1 255.255.255.0
+ ip nat inside
+
+interface GigabitEthernet0/0
+ description WAN_Outside
+ ip address 203.0.113.1 255.255.255.252
+ ip nat outside
+
+```
+
+---
+
+### 4. 자주 실수하는 부분 (Troubleshooting)
+
+* **`ip nat inside/outside` 누락**: 명령어만 입력하고 인터페이스에 방향을 지정하지 않으면 변환이 일어나지 않습니다.
+* **ACL 범위 설정 오류**: `permit` 되지 않은 IP는 NAT 서비스에서 제외되어 인터넷 통신이 불가능해집니다.
+* **라우팅 경로 미확보**: NAT 설정과 별개로 디폴트 라우트(`ip route 0.0.0.0 0.0.0.0 ...`)가 외부 인터페이스를 향하고 있어야 합니다.
+
+---
+
+### 5. 상태 확인 및 검증
+
+설정 후에는 다음 명령어들을 통해 NAT 테이블이 정상적으로 생성되는지 확인해야 합니다.
+
+* `show ip nat translations`: 현재 변환되어 관리되고 있는 NAT 테이블 전체를 확인합니다.
+* `show ip nat statistics`: NAT 성공 횟수, 오류, 점유 중인 IP 정보를 요약해서 보여줍니다.
+* `clear ip nat translation *`: 테스트를 위해 기존 NAT 테이블 강제 초기화 시 사용합니다.
+
+---
+
+Next Level : NAT Pool vs Interface Overload 차이점
+
+---
+
+설정 준수 확인: 깃허브 마크다운 포맷 적용, 'Next Level' 표기 완료, 강사/학원 등 금지어 제외, 단답형 핵심 단어 마무리.
+
+NAT Table, ACL, Port Multiplexing, Inside/Outside, Translation Entry
 
