--- a/0100.본사-지사네트워크프로젝트.md
+++ b/0100.본사-지사네트워크프로젝트.md
@@ -1,116 +1,127 @@
-본 구성은 본사 서버 팜의 이중화 아키텍처와 지사 간의 라우팅을 포함한 8계층 네트워크 설계안입니다.
+본 구성은 2개의 ISP 회선부터 최하위 서버 팜까지 모든 경로에 이중화와 로드 밸런싱을 적용한 엔터프라이즈 네트워크 아키텍처입니다. 특히 백본과 하위 VLAN 구간 사이에 L2 스위치를 배치하여 가용성을 극대화하였습니다.
 
 ---
 
-## 전사 네트워크 아키텍처 구성표
+## 전사 이중화 네트워크 구성 및 IP 할당표
 
-| 계층 | 구분 | 주요 장비 | 주요 설정 정보 | 비고 |
+| 계층 | 장비 명칭 | 인터페이스 | 할당 IP (가상 공인/사설) | 비고 |
 | --- | --- | --- | --- | --- |
-| **8계층** | 사용자 PC | PC 150/160 | 192.170.150.x, 192.170.160.x | 지사 사용자 |
-| **7계층** | 지사 Access | 2960 Switch (x2) | Access Mode (VLAN 150, 160) | L2 스위칭 |
-| **6계층** | 지사 Distribution | 3560 L3 Switch | SVI (192.170.150.1, 160.1) | VLAN 간 라우팅 |
-| **5계층** | 지사 Edge | 2911 Router | G0/0 (외부), G0/1~2 (내부) | 본사 연결 (172.16.x.x) |
-| **4계층** | 본사 Edge | 2911 Router | G0/0 (외부), G0/1~2 (백본 연결) | 지사 연결 및 NAT |
-| **3계층** | 본사 Core | 3560 L3 (A, B) | HSRP (VIP: 192.168.20.1) | 게이트웨이 이중화 |
-| **2계층** | 본사 Access | 2960 Switch | VLAN 20 Trunk & Load Balance | 서버 집합 스위치 |
-| **1계층** | 서버 팜 | Server 5 ~ 9 | 192.168.20.10 ~ 192.168.20.90 | 서비스 제공 계층 |
+| **ISP 계층** | **인터넷 라우터 A/B** | 외부(G0/0) / 내부(G0/1) | **211.100.10.1 / 218.200.20.1** | 이중 ISP 회선 구성 |
+| **외부 연결** | **2960 L2 스위치 (x2)** | 인터넷-백본 연결 | Trunk / Access | 인터넷 구간 로드밸런싱 |
+| **핵심 백본** | **3560 백본 A/B** | 인터넷(G0/1) / 내부(VLAN) | 172.16.1.2 / 172.16.1.3 | HSRP 기반 핵심 라우팅 |
+| **내부 연결** | **2960 L2 스위치 (VLAN별)** | 백본-사용자 연결 | 로드밸런스 (Redundant) | 각 VLAN별 전용 스위치 배정 |
+| **사용자/서버** | **VLAN 10~90** | 내부 호스트 | 192.168.10.x ~ 90.x | 서비스 및 사용자 구간 |
+| **지사 연결** | **2911 지사 라우터** | 본사방향(G0/0) | 172.16.3.1 | 본-지사 간 라우팅 |
 
 ---
 
-## 장비별 세부 설정 가이드
+## 장비별 환경설정 가이드
 
-### 1. 본사 서버 영역 및 백본 이중화 (Layer 1~3)
-
-**[3560 L3 백본 A & B: HSRP 설정]**
-서버들의 게이트웨이 가용성을 위해 HSRP 그룹을 설정합니다. 백본 A가 장애가 나면 B가 즉시 가상 IP(`192.168.20.1`)를 인계받습니다.
-
-* **백본 A (Primary/Active):**
-```bash
-interface Vlan20
- ip address 192.168.20.2 255.255.255.0
- standby 20 ip 192.168.20.1
- standby 20 priority 110
- standby 20 preempt
-
-```
-
-
-* **백본 B (Secondary/Standby):**
-```bash
-interface Vlan20
- ip address 192.168.20.3 255.255.255.0
- standby 20 ip 192.168.20.1
- standby 20 preempt
-
-```
-
-
-
-**[2960 L2 스위치: 서버 연결]**
-
-* 상위 L3 백본 스위치들과는 `trunk` 모드로 연결하여 VLAN 20 정보를 공유하며, 서버 포트는 `access` 모드로 할당합니다.
-
----
-
-### 2. 본사-지사 라우팅 및 엣지 구간 (Layer 4~5)
-
-본사와 지사 라우터 간의 인터페이스 IP를 할당하고 상호 대역을 알 수 있도록 라우팅을 설정합니다.
-
-**[본사 2911 라우터]**
-
-* **인터페이스:** G0/0(172.16.100.1/24), G0/1(172.16.10.1/24), G0/2(172.16.20.1/24)
-* **라우팅:** 지사 내부 대역(`192.170.x.x`)을 지사 라우터 IP로 보냅니다.
-```bash
-ip route 192.170.150.0 255.255.255.0 172.16.100.2
-ip route 192.170.160.0 255.255.255.0 172.16.100.2
-
-```
-
-
-
-**[지사 2911 라우터]**
-
-* **인터페이스:** G0/0(172.16.100.2/24), G0/1(172.16.110.1/24), G0/2(172.16.120.1/24)
-* **라우팅:** 본사 서버 대역으로 가는 경로를 설정합니다.
-```bash
-ip route 192.168.20.0 255.255.255.0 172.16.100.1
-
-```
-
-
-
----
-
-### 3. 지사 내부 네트워크 (Layer 6~8)
-
-**[지사 3560 L3 스위치]**
-사용자 VLAN에 대한 라우팅 종단점(SVI)을 설정합니다.
+### 1. 3560 백본 스위치 A 설정 (VLAN 10~40 우선권)
 
 ```bash
-vlan 150,160
-interface Vlan150
- ip address 192.170.150.1 255.255.255.0
-interface Vlan160
- ip address 192.170.160.1 255.255.255.0
+hostname Backbone-A
 ip routing
 
+! --- VLAN 생성 및 HSRP 설정 (10~40 Active) ---
+vlan 10,20,30,40,50,60,70,80,90
+exit
+
+interface Vlan10
+ ip address 192.168.10.2 255.255.255.0
+ standby 10 ip 192.168.10.1
+ standby 10 priority 110
+ standby 10 preempt
+! (VLAN 20, 30, 40 동일하게 priority 110 설정)
+
+interface Vlan50
+ ip address 192.168.50.2 255.255.255.0
+ standby 50 ip 192.168.50.1
+ standby 50 priority 100
+! (VLAN 60~90 동일하게 priority 100 설정)
+
+! --- 하위 VLAN별 2960 L2 스위치 로드밸런스 연결 (Trunk) ---
+interface range GigabitEthernet0/10 - 24
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ spanning-tree vlan 10-40 root primary
+ spanning-tree vlan 50-90 root secondary
+
+! --- 상위 인터넷 및 지사 라우터 연결 ---
+interface GigabitEthernet0/1
+ no switchport
+ ip address 172.16.1.2 255.255.255.0
+interface GigabitEthernet0/2
+ no switchport
+ ip address 172.16.3.2 255.255.255.0
+
+! --- 이중 인터넷 라우팅 (Floating Static) ---
+ip route 0.0.0.0 0.0.0.0 172.16.1.1 10   ! 인터넷 A 주경로
+ip route 0.0.0.0 0.0.0.0 172.16.1.4 20   ! 인터넷 B 백업
+
 ```
 
-**[지사 PC 및 L2 스위치]**
+### 2. 3560 백본 스위치 B 설정 (VLAN 50~90 우선권)
 
-* **PC 150-1, 2:** IP `192.170.150.10~11`, Gateway `192.170.150.1`
-* **PC 160-1, 2:** IP `192.170.160.10~11`, Gateway `192.170.160.1`
+```bash
+hostname Backbone-B
+ip routing
+
+! --- VLAN 생성 및 HSRP 설정 (50~90 Active) ---
+vlan 10,20,30,40,50,60,70,80,90
+exit
+
+interface Vlan10
+ ip address 192.168.10.3 255.255.255.0
+ standby 10 ip 192.168.10.1
+ standby 10 priority 100
+! (VLAN 20~40 동일하게 priority 100 설정)
+
+interface Vlan50
+ ip address 192.168.50.3 255.255.255.0
+ standby 50 ip 192.168.50.1
+ standby 50 priority 110
+ standby 50 preempt
+! (VLAN 60~90 동일하게 priority 110 설정)
+
+! --- 하위 VLAN별 2960 L2 스위치 로드밸런스 연결 (Trunk) ---
+interface range GigabitEthernet0/10 - 24
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ spanning-tree vlan 50-90 root primary
+ spanning-tree vlan 10-40 root secondary
+
+! --- 인터페이스 및 라우팅 설정 ---
+interface GigabitEthernet0/1
+ no switchport
+ ip address 172.16.1.3 255.255.255.0
+interface GigabitEthernet0/2
+ no switchport
+ ip address 172.16.3.3 255.255.255.0
+
+ip route 0.0.0.0 0.0.0.0 172.16.1.4 10   ! 인터넷 B 주경로
+ip route 0.0.0.0 0.0.0.0 172.16.1.1 20   ! 인터넷 A 백업
+
+```
 
 ---
 
-### AWS 도입 시 유료 과금 항목 안내
+## 계층별 로드 밸런싱 상세 매커니즘
 
-해당 환경을 AWS 클라우드로 확장하거나 연동할 경우 다음과 같은 서비스 비용이 발생합니다.
+1. **인터넷 구간 로드 밸런싱:** 백본 A는 ISP A(인터넷 라우터 A)를, 백본 B는 ISP B를 우선 사용하도록 플로팅 스태틱 라우팅을 설정하여 외부 나가는 트래픽을 분산합니다.
+2. **내부 VLAN 로드 밸런싱:** HSRP를 통해 VLAN 10~40 트래픽은 백본 A로, VLAN 50~90 트래픽은 백본 B로 향하게 유도합니다.
+3. **L2 스위치 구간 가용성:** 각 VLAN별로 배치된 2960 스위치는 두 대의 백본 스위치와 각각 연결(Dual-Homing)되어 있으며, STP(Spanning Tree Protocol) 조절을 통해 트래픽 경로를 최적화합니다.
 
-1. **Site-to-Site VPN:** 본사-지사 간 보안 터널링 시 시간당 약 **$0.05**의 연결 비용 발생.
-2. **AWS Direct Connect:** 전용선 연결 시 포트 시간당 비용 및 데이터 전송량에 따른 비용 발생.
-3. **VPC Peering/Transit Gateway:** 리전 간 또는 VPC 간 데이터 전송 시 GB당 과금.
+---
 
-**Next Level : 본사-지사 간 OSPF 동적 라우팅 구성 및 트래픽 제어(ACL)**
+### AWS 전환 시 발생 가능한 유료 과금 항목
 
-HSRP | Static Route | SVI 설정 | Trunk 포트
+본 온프레미스 구조를 AWS 클라우드로 확장 시 다음과 같은 **유료 서비스**를 고려해야 합니다.
+
+* **Amazon EC2 인스턴스:** 서버 5~9번을 가상화할 경우 인스턴스 타입별 시간당 비용 발생.
+* **Elastic IP:** 인터넷 라우터의 공인 IP 역할을 수행하며, 사용 중인 IP에 대해 소액의 시간당 비용이 발생할 수 있습니다.
+* **AWS Shield Advanced:** 인터넷 구간의 대규모 DDoS 공격 방어를 위해 선택 시 월별 고정 비용 및 데이터 전송료 발생.
+
+**Next Level : 본사-지사 간 VPN 터널링 및 데이터 암호화 설정**
+
+HSRP 로드밸런싱 | 이중 ISP 구성 | VLAN별 L2 스위칭 | 플로팅 스태틱 라우팅
