--- a/0100.본사-지사네트워크프로젝트.md
+++ b/0100.본사-지사네트워크프로젝트.md
@@ -122,6 +122,493 @@ ip route 0.0.0.0 0.0.0.0 172.16.1.1 20   ! 인터넷 A 백업
 * **Elastic IP:** 인터넷 라우터의 공인 IP 역할을 수행하며, 사용 중인 IP에 대해 소액의 시간당 비용이 발생할 수 있습니다.
 * **AWS Shield Advanced:** 인터넷 구간의 대규모 DDoS 공격 방어를 위해 선택 시 월별 고정 비용 및 데이터 전송료 발생.
 
-**Next Level : 본사-지사 간 VPN 터널링 및 데이터 암호화 설정**
+---
+본사 최상단 인터넷 라우터와 내부 백본 스위치를 연결하는 인터넷 구간 L2 스위치(2960) 2대의 설정입니다. 이 스위치들은 외부 ISP 트래픽이 내부 백본 A, B로 원활하게 분산될 수 있도록 물리적 경로를 제공하며, VLAN 트렁킹을 통해 논리적 연결성을 확보합니다.
 
-HSRP 로드밸런싱 | 이중 ISP 구성 | VLAN별 L2 스위칭 | 플로팅 스태틱 라우팅
+---
+
+## 인터넷 구간 L2 스위칭 아키텍처 구성표
+
+| 장비 명칭 | 업링크 (라우터 방향) | 다운링크 (백본 방향) | 주요 설정 | 비고 |
+| --- | --- | --- | --- | --- |
+| **인터넷 L2 스위치 A** | G0/1 (인터넷 라우터 A) | G0/2 (백본 A), G0/3 (백본 B) | VLAN 100 (External) | ISP 1 트래픽 분산 |
+| **인터넷 L2 스위치 B** | G0/1 (인터넷 라우터 B) | G0/2 (백본 A), G0/3 (백본 B) | VLAN 100 (External) | ISP 2 트래픽 분산 |
+
+---
+
+## 2960 인터넷 구간 L2 스위치 환경설정 파일
+
+### 1. 인터넷 L2 스위치 A 설정
+
+인터넷 라우터 A의 트래픽을 백본 A와 B로 전달하기 위한 가용성 설정입니다.
+
+```bash
+hostname INT-L2-SW-A
+
+! --- 인터넷 구간 전용 VLAN 생성 ---
+vlan 100
+ name External_Traffic
+exit
+
+! --- 인터넷 라우터 A 연결 포트 (Access/Trunk) ---
+interface GigabitEthernet0/1
+ description Link_to_Internet_Router_A
+ switchport mode access
+ switchport access vlan 100
+ spanning-tree portfast
+ no shutdown
+
+! --- 백본 A 연결 포트 (Trunk) ---
+interface GigabitEthernet0/2
+ description Link_to_Backbone_A
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ switchport trunk allowed vlan 100
+ no shutdown
+
+! --- 백본 B 연결 포트 (Trunk) ---
+interface GigabitEthernet0/3
+ description Link_to_Backbone_B
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ switchport trunk allowed vlan 100
+ no shutdown
+
+! --- 관리용 IP 설정 (필요 시) ---
+interface Vlan1
+ ip address 172.16.1.10 255.255.255.0
+ no shutdown
+
+```
+
+---
+
+### 2. 인터넷 L2 스위치 B 설정
+
+인터넷 라우터 B의 트래픽을 이중화된 경로로 백본에 전달합니다.
+
+```bash
+hostname INT-L2-SW-B
+
+! --- 인터넷 구간 전용 VLAN 생성 ---
+vlan 100
+ name External_Traffic
+exit
+
+! --- 인터넷 라우터 B 연결 포트 ---
+interface GigabitEthernet0/1
+ description Link_to_Internet_Router_B
+ switchport mode access
+ switchport access vlan 100
+ spanning-tree portfast
+ no shutdown
+
+! --- 백본 A 연결 포트 ---
+interface GigabitEthernet0/2
+ description Link_to_Backbone_A
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ switchport trunk allowed vlan 100
+ no shutdown
+
+! --- 백본 B 연결 포트 ---
+interface GigabitEthernet0/3
+ description Link_to_Backbone_B
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ switchport trunk allowed vlan 100
+ no shutdown
+
+! --- 관리용 IP 설정 ---
+interface Vlan1
+ ip address 172.16.1.11 255.255.255.0
+ no shutdown
+
+```
+
+---
+
+## 설정 핵심 가이드 및 유의사항
+
+1. **VLAN 격리:** 인터넷 트래픽이 통과하는 VLAN 100은 내부 사용자 VLAN(10~90)과 완전히 격리되어야 보안 사고를 방지할 수 있습니다.
+2. **Spanning Tree (STP) 최적화:** `spanning-tree portfast` 설정을 라우터 연결 포트에 적용하여 포트 활성화 시간을 단축하고, 이중화 링크 간의 루프를 방지하기 위해 기본 STP 설정을 유지합니다.
+3. **Trunk Allowed VLAN:** 보안 강화를 위해 Trunk 포트에서 모든 VLAN을 허용하지 않고, 인터넷 통신에 필요한 특정 VLAN(예: 100)만 명시적으로 허용(`allowed vlan`)하는 것이 권장됩니다.
+
+---
+
+### AWS 환경 전환 시 과금 항목 안내
+
+이러한 L2 스위칭 구조를 AWS VPC 내에서 구현할 경우 다음과 같은 **유료 서비스**를 참고해야 합니다.
+
+* **Amazon VPC Lattice:** 복잡한 L2/L3 스위칭 없이 서비스 간 연결을 관리할 때 사용하며, 서비스 가입 및 데이터 처리량에 따라 **유료 과금**됩니다.
+* **VPC Flow Logs:** 인터넷 구간의 트래픽 흐름을 모니터링하기 위해 로그를 CloudWatch로 전송할 경우 저장량 및 분석량에 따라 비용이 발생합니다.
+* **AWS PrivateLink:** 인터넷을 거치지 않고 내부 네트워크 스위칭처럼 엔드포인트 간 통신을 구성할 때 인터페이스 시간당 비용이 청구됩니다.
+
+
+---
+본사 최상단에서 외부 ISP와 직접 연결되는 인터넷 라우터 A와 B의 설정입니다. 이 장비들은 외부 공인 IP를 수용하고, 내부 사설 대역을 위한 NAT(Network Address Translation) 및 하위 백본과의 라우팅을 담당합니다.
+
+
+
+## 인터넷 계층 및 외부망 구성표
+
+| 장비 명칭 | 외부 인터페이스(G0/0) | 내부 인터페이스(G0/1) | 기본 게이트웨이(ISP) | 비고 |
+| --- | --- | --- | --- | --- |
+| **인터넷 라우터 A** | **211.100.10.1/24** | 172.16.1.1/24 | 211.100.10.254 | ISP 1 메인 |
+| **인터넷 라우터 B** | **218.200.20.1/24** | 172.16.1.4/24 | 218.200.20.254 | ISP 2 메인 |
+
+---
+
+## 2911 인터넷 라우터 환경설정 파일
+
+### 1. 인터넷 라우터 A 설정 (ISP 1 연결)
+
+```bash
+hostname Router-ISP-A
+
+! --- 외부 인터페이스 설정 (공인 IP) ---
+interface GigabitEthernet0/0
+ description Connection_to_ISP_1
+ ip address 211.100.10.1 255.255.255.0
+ ip nat outside
+ no shutdown
+
+! --- 내부 인터페이스 설정 (L2 스위치/백본 방향) ---
+interface GigabitEthernet0/1
+ description Connection_to_Internal_L2_Switch
+ ip address 172.16.1.1 255.255.255.0
+ ip nat inside
+ no shutdown
+
+! --- NAT 설정 (내부 사설망 -> 외부 공인망) ---
+access-list 1 permit 192.168.0.0 0.0.255.255  ! 본사 전체 VLAN 대역
+access-list 1 permit 192.170.0.0 0.0.255.255  ! 지사 대역 (필요시)
+ip nat inside source list 1 interface GigabitEthernet0/0 overload
+
+! --- 라우팅 설정 ---
+ip route 0.0.0.0 0.0.0.0 211.100.10.254       ! ISP로 나가는 기본 경로
+ip route 192.168.0.0 255.255.0.0 172.16.1.2  ! 내부 백본 A 방향 경로
+ip route 192.168.0.0 255.255.0.0 172.16.1.3 20 ! 내부 백본 B 방향 (백업)
+
+```
+
+### 2. 인터넷 라우터 B 설정 (ISP 2 연결)
+
+```bash
+hostname Router-ISP-B
+
+! --- 외부 인터페이스 설정 (공인 IP) ---
+interface GigabitEthernet0/0
+ description Connection_to_ISP_2
+ ip address 218.200.20.1 255.255.255.0
+ ip nat outside
+ no shutdown
+
+! --- 내부 인터페이스 설정 ---
+interface GigabitEthernet0/1
+ description Connection_to_Internal_L2_Switch
+ ip address 172.16.1.4 255.255.255.0
+ ip nat inside
+ no shutdown
+
+! --- NAT 설정 ---
+access-list 1 permit 192.168.0.0 0.0.255.255
+ip nat inside source list 1 interface GigabitEthernet0/0 overload
+
+! --- 라우팅 설정 ---
+ip route 0.0.0.0 0.0.0.0 218.200.20.254       ! ISP 2로 나가는 기본 경로
+ip route 192.168.0.0 255.255.0.0 172.16.1.3  ! 내부 백본 B 방향 경로
+ip route 192.168.0.0 255.255.0.0 172.16.1.2 20 ! 내부 백본 A 방향 (백업)
+
+```
+
+---
+
+## 설정 핵심 포인트 설명
+
+1. **PAT(Port Address Translation):** `overload` 명령어를 통해 단일 공인 IP로 내부의 수많은 사설 IP 단말들이 인터넷을 사용할 수 있게 합니다.
+2. **비대칭 라우팅 방지:** 각 라우터는 자신과 직접 연결된 백본(A 또는 B)을 우선순위로 두고, 장애 시에만 반대편 백본을 통하도록 AD(Administrative Distance) 값을 조절하였습니다.
+3. **NAT Inside/Outside:** 외부 인터넷망 포트에는 `outside`, 내부 로컬망 포트에는 `inside`를 반드시 지정해야 주소 변환이 정상적으로 동작합니다.
+
+---
+
+### AWS 환경 마이그레이션 시 과금 주의사항
+
+해당 라우터 기능을 AWS로 이전할 경우 다음 항목에서 **유료 과금**이 발생합니다.
+
+* **AWS NAT Gateway:** 본 설정의 NAT 기능을 수행하며, 시간당 약 **$0.045** 및 GB당 데이터 처리 비용이 발생합니다.
+* **Public IPv4 Address:** AWS에서 할당받는 공인 IP는 인스턴스 실행 여부와 상관없이 시간당 비용이 청구될 수 있습니다. (최근 정책 변경으로 사용 중인 IP도 과금 대상)
+* **Data Transfer Out:** 인터넷으로 나가는 트래픽(Egress)은 데이터 양에 따라 월별 청구됩니다.
+
+---
+본사에서 지사로 연결되는 통로인 본사-지사 연결용 라우터와 실제 지사 현장에 설치된 라우터 및 스위치의 설정입니다. 본사와 지사는 `172.16.3.0/24` 대역을 통해 연결되며, 지사 내부는 VLAN 150~180을 통해 각 부서망이 독립적으로 운영됩니다.
+
+---
+
+## 본사-지사 연결 및 지사 인프라 구성표
+
+| 장비 명칭 | 인터페이스 | 할당 IP | 비고 |
+| --- | --- | --- | --- |
+| **본사 지사행 라우터** | G0/0 (지사방향) | 172.16.3.1/24 | 본사측 종단점 |
+| **A지사 라우터** | G0/0 (본사방향) | 172.16.3.2/24 | 지사측 종단점 |
+| **지사 L3 스위치** | SVI (VLAN 150-180) | 192.170.150.1 ~ 180.1 | 지사 내부 게이트웨이 |
+| **지사 L2 스위치** | Uplink (Trunk) | - | VLAN별 사용자 연결 |
+
+---
+
+## 장비별 환경설정 파일
+
+### 1. 본사측 지사 연결용 2911 라우터 설정
+
+이 라우터는 본사 백본(A, B)과 지사를 연결하는 교량 역할을 합니다.
+
+```bash
+hostname HQ-Branch-Router
+
+! --- 본사 내부 백본 연결 (G0/1: 백본A, G0/2: 백본B) ---
+interface GigabitEthernet0/1
+ ip address 172.16.3.2 255.255.255.0  ! 백본 A와 통신
+ no shutdown
+
+interface GigabitEthernet0/2
+ ip address 172.16.3.3 255.255.255.0  ! 백본 B와 통신
+ no shutdown
+
+! --- 지사 라우터 연결 (G0/0) ---
+interface GigabitEthernet0/0
+ ip address 172.16.3.1 255.255.255.0
+ no shutdown
+
+! --- 라우팅 설정 ---
+! 본사 내부 VLAN 대역으로 가는 경로
+ip route 192.168.0.0 255.255.0.0 172.16.3.2
+ip route 192.168.0.0 255.255.0.0 172.16.3.3 20
+
+! 지사 내부 VLAN 대역으로 가는 경로
+ip route 192.170.150.0 255.255.252.0 172.16.3.2  ! 지사 라우터 방향
+
+```
+
+---
+
+### 2. A지사 2911 라우터 설정
+
+지사 최상단 장비로, 본사와의 통신 및 지사 내부 L3 스위치와의 라우팅을 담당합니다.
+
+```bash
+hostname Branch-A-Router
+
+! --- 본사 연결 (G0/0) ---
+interface GigabitEthernet0/0
+ ip address 172.16.3.2 255.255.255.0
+ no shutdown
+
+! --- 지사 내부 L3 스위치 연결 (G0/1) ---
+interface GigabitEthernet0/1
+ ip address 192.170.1.1 255.255.255.252
+ no shutdown
+
+! --- 라우팅 설정 ---
+ip route 0.0.0.0 0.0.0.0 172.16.3.1            ! 본사 방향 Default Route
+ip route 192.170.150.0 255.255.252.0 192.170.1.2 ! 지사 내부 L3 스위치 방향
+
+```
+
+---
+
+### 3. 지사 3560 L3 스위치 설정
+
+지사 내부의 모든 VLAN 게이트웨이 역할을 수행하며, VLAN 간 라우팅을 처리합니다.
+
+```bash
+hostname Branch-A-L3Switch
+ip routing
+
+! --- VLAN 생성 ---
+vlan 150,160,170,180
+exit
+
+! --- 각 VLAN별 게이트웨이(SVI) 설정 ---
+interface Vlan150
+ ip address 192.170.150.1 255.255.255.0
+interface Vlan160
+ ip address 192.170.160.1 255.255.255.0
+interface Vlan170
+ ip address 192.170.170.1 255.255.255.0
+interface Vlan180
+ ip address 192.170.180.1 255.255.255.0
+
+! --- 상위 지사 라우터 연결 ---
+interface GigabitEthernet0/1
+ no switchport
+ ip address 192.170.1.2 255.255.255.252
+ no shutdown
+
+! --- 기본 경로 설정 ---
+ip route 0.0.0.0 0.0.0.0 192.170.1.1
+
+```
+
+---
+
+### 4. 지사 2960 L2 스위치 설정 (VLAN 150 예시)
+
+사용자 PC가 연결되는 엑세스 계층 스위치입니다.
+
+```bash
+hostname Branch-A-L2-V150
+
+! --- 상위 L3 스위치 연결 (Trunk) ---
+interface GigabitEthernet0/1
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ no shutdown
+
+! --- 사용자 PC 연결 포트 (VLAN 150) ---
+interface range FastEthernet0/1 - 24
+ switchport mode access
+ switchport access vlan 150
+ spanning-tree portfast  ! PC 연결 속도 최적화
+
+```
+
+---
+
+### AWS 및 클라우드 하이브리드 구성 시 유료 항목
+
+지사와 본사를 클라우드로 연동할 경우 다음과 같은 **유료 서비스**가 사용됩니다.
+
+1. **AWS Site-to-Site VPN:** 지사 라우터와 AWS VPC 간 암호화 터널 생성 시 시간당 연결 비용 발생.
+2. **Amazon Route 53 Private Hosted Zones:** 본사 및 지사 내부 도메인을 클라우드와 공유하여 사용할 경우 월별 도메인 관리 비용 및 질의 비용 청구.
+3. **Transit Gateway Connect:** 지사의 SD-WAN 장비 등과 고속으로 연동할 때 데이터 처리량에 따른 추가 과금.
+
+---
+본사 및 지사의 사용자 접단(Access Layer)을 담당하는 L2 스위치 설정입니다. 요청하신 대로 VLAN 50~80 및 90~120 대역은 장비 효율화를 위해 통합 스위치로 구성하였으며, 나머지 VLAN은 각 전용 스위치로 배치하였습니다.
+
+---
+
+## VLAN별 액세스 스위치 배치 및 포트 구성표
+
+| 스위치 구분 | 소속 VLAN | 주요 연결 대상 | 업링크 (백본 방향) | 비고 |
+| --- | --- | --- | --- | --- |
+| **L2-SW-V10~40** | VLAN 10, 20, 30, 40 | 본사 사무/운영 | G0/1 (Trunk) | 각 VLAN별 개별 스위치 |
+| **L2-SW-Group-A** | **VLAN 50 ~ 80** | 본사 공용/부서 | G0/1 (Trunk) | **통합 스위치 1** |
+| **L2-SW-Group-B** | **VLAN 90 ~ 120** | 본사 기타/연구 | G0/1 (Trunk) | **통합 스위치 2** |
+| **L2-SW-V150~180** | VLAN 150, 160, 170, 180 | 지사 사용자 | G0/1 (Trunk) | 지사 개별 스위치 |
+
+---
+
+## 2960 L2 스위치 환경설정 파일 (Access Layer)
+
+### 1. 통합 스위치 A 설정 (VLAN 50~80 묶음)
+
+하나의 스위치에서 여러 부서를 수용하므로, 포트별로 정확한 VLAN 할당이 핵심입니다.
+
+```bash
+hostname L2-SW-Group-A
+
+! --- VLAN 생성 ---
+vlan 50,60,70,80
+exit
+
+! --- 상위 백본 A, B 연결 (Trunk) ---
+interface GigabitEthernet0/1
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ switchport trunk allowed vlan 50-80
+ no shutdown
+
+! --- 사용자 포트 분할 할당 (예시) ---
+interface range FastEthernet0/1 - 6
+ switchport mode access
+ switchport access vlan 50   ! 부서 50번
+ spanning-tree portfast
+
+interface range FastEthernet0/7 - 12
+ switchport mode access
+ switchport access vlan 60   ! 부서 60번
+ spanning-tree portfast
+
+interface range FastEthernet0/13 - 18
+ switchport mode access
+ switchport access vlan 70   ! 부서 70번
+ spanning-tree portfast
+
+interface range FastEthernet0/19 - 24
+ switchport mode access
+ switchport access vlan 80   ! 부서 80번
+ spanning-tree portfast
+
+```
+
+### 2. 통합 스위치 B 설정 (VLAN 90~120 묶음)
+
+```bash
+hostname L2-SW-Group-B
+
+vlan 90,100,110,120
+exit
+
+interface GigabitEthernet0/1
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ switchport trunk allowed vlan 90-120
+ no shutdown
+
+! --- 사용자 포트 분할 할당 ---
+interface range FastEthernet0/1 - 12
+ switchport mode access
+ switchport access vlan 90
+ spanning-tree portfast
+
+interface range FastEthernet0/13 - 24
+ switchport mode access
+ switchport access vlan 110  ! 필요에 따라 VLAN 할당 조절
+ spanning-tree portfast
+
+```
+
+### 3. 지사 전용 스위치 설정 (예: VLAN 150)
+
+개별 VLAN 전용 스위치는 모든 가용 포트를 해당 VLAN에 할당합니다.
+
+```bash
+hostname L2-SW-V150
+
+vlan 150
+exit
+
+interface GigabitEthernet0/1
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ switchport trunk allowed vlan 150
+ no shutdown
+
+interface range FastEthernet0/1 - 24
+ switchport mode access
+ switchport access vlan 150
+ spanning-tree portfast
+
+```
+
+---
+
+## 계층별 설정 가이드 및 유의사항
+
+1. **VLAN Pruning:** Trunk 포트 설정 시 `switchport trunk allowed vlan` 명령어를 사용하여 해당 스위치에 필요한 VLAN 트래픽만 통과하도록 제한합니다. 이는 불필요한 브로드캐스트 트래픽을 차단하여 네트워크 성능을 높입니다.
+2. **Spanning Tree Portfast:** PC나 서버가 연결되는 Access 포트에 `portfast`를 설정하면, 링크 연결 시 청취(Listening) 및 학습(Learning) 단계를 건너뛰고 즉시 포트가 활성화됩니다.
+3. **통합 스위치 보안:** 여러 VLAN이 한 스위치에 묶여 있으므로, 실수로 포트를 잘못 설정하여 부서 간 망이 섞이지 않도록 포트 관리에 주의해야 합니다.
+
+---
+
+### AWS 환경 마이그레이션 시 과금 주의사항
+
+온프레미스의 VLAN 및 액세스 스위치 구조를 AWS VPC로 이전할 경우 발생하는 **유료 항목**입니다.
+
+* **Amazon VPC Subnets:** VLAN 개념은 서브넷으로 대체됩니다. 서브넷 생성 자체는 무료이나, 서브넷 간 통신을 위해 **Transit Gateway**를 사용할 경우 데이터 처리 비용이 발생합니다.
+* **AWS PrivateLink:** 각 부서(VLAN) 간에 특정 서비스만 공유하고 싶을 때 엔드포인트를 생성하며, 이 엔드포인트 유지 시 시간당 비용이 **유료**로 청구됩니다.
+* **VPC Flow Logs:** 액세스 계층의 모든 트래픽 로그를 수집하여 분석할 경우 CloudWatch Logs 및 S3 저장 비용이 발생합니다.
+
+**Next Level : 액세스 포트 보안을 위한 Port-Security 및 Sticky MAC 설정**
+
+VLAN 통합 설정 | Trunk Allowed VLAN | Portfast 적용 | 액세스 계층 이중화 구성
