--- a/0100.본사-지사네트워크프로젝트.md
+++ b/0100.본사-지사네트워크프로젝트.md
@@ -609,6 +609,76 @@ interface range FastEthernet0/1 - 24
 * **AWS PrivateLink:** 각 부서(VLAN) 간에 특정 서비스만 공유하고 싶을 때 엔드포인트를 생성하며, 이 엔드포인트 유지 시 시간당 비용이 **유료**로 청구됩니다.
 * **VPC Flow Logs:** 액세스 계층의 모든 트래픽 로그를 수집하여 분석할 경우 CloudWatch Logs 및 S3 저장 비용이 발생합니다.
 
-**Next Level : 액세스 포트 보안을 위한 Port-Security 및 Sticky MAC 설정**
+---
+본사 운영의 핵심인 VLAN 10 전용 엑세스 스위치의 설정 파일입니다. 다른 개별 VLAN(20~40, 130~180 등)용 스위치들도 호스트네임과 VLAN 번호만 변경하여 동일한 구조로 적용할 수 있습니다.
 
-VLAN 통합 설정 | Trunk Allowed VLAN | Portfast 적용 | 액세스 계층 이중화 구성
+---
+
+## VLAN 10 전용 액세스 스위치 구성표
+
+| 항목 | 설정 내용 | 비고 |
+| --- | --- | --- |
+| **장비 모델** | Cisco Catalyst 2960 (L2) | 액세스 계층 장비 |
+| **소속 VLAN** | VLAN 10 (Management/Operation) | 전용 단일 VLAN 구성 |
+| **업링크 포트** | GigabitEthernet 0/1, 0/2 | 백본 A, B 이중화 연결 |
+| **사용자 포트** | FastEthernet 0/1 ~ 0/24 | PC 및 단말 연결 |
+
+---
+
+## 2960 액세스 스위치 환경설정 파일 (VLAN 10 대표)
+
+```bash
+hostname L2-SW-VLAN10
+
+! --- VLAN 생성 및 이름 지정 ---
+vlan 10
+ name Operation_Dept
+exit
+
+! --- 상위 백본 스위치(3560 A, B) 이중화 연결 ---
+! 두 포트 모두 트렁크로 설정하여 백본 장애 시 경로 우회 보장
+interface range GigabitEthernet0/1 - 2
+ switchport trunk encapsulation dot1q
+ switchport mode trunk
+ switchport trunk allowed vlan 10
+ no shutdown
+
+! --- 사용자 단말 연결 포트 설정 (1~24번 전체) ---
+interface range FastEthernet0/1 - 24
+ switchport mode access
+ switchport access vlan 10
+ spanning-tree portfast          ! 단말 연결 시 즉시 통신 활성화
+ spanning-tree bpduguard enable  ! 루프 방지를 위한 보안 설정
+ no shutdown
+
+! --- 관리용 인터페이스 설정 ---
+interface Vlan10
+ ip address 192.168.10.10 255.255.255.0
+ no shutdown
+
+! --- 기본 게이트웨이 (백본 HSRP VIP) ---
+ip default-gateway 192.168.10.1
+
+```
+
+---
+
+## 설정 핵심 가이드
+
+1. **VLAN 전용 할당:** 모든 사용자 포트(Fa0/1-24)를 `switchport access vlan 10`으로 고정하여 해당 부서만의 독립적인 브로드캐스트 도메인을 형성합니다.
+2. **BPDU Guard:** 사용자가 임의로 스위치를 연결하여 전체 네트워크에 루프(Loop)가 발생하는 것을 차단하기 위해 `bpduguard`를 활성화합니다.
+3. **이중화 업링크:** `Gi0/1`과 `Gi0/2`를 각각 백본 A와 B에 연결함으로써, 하나의 백본 스위치나 라인에 문제가 생겨도 VLAN 10의 서비스가 중단되지 않도록 설계되었습니다.
+
+---
+
+### AWS 환경 연동 시 유료 과금 항목 안내
+
+이러한 단일 서브넷(VLAN) 환경을 AWS로 확장할 때 주의해야 할 **유료 항목**입니다.
+
+* **AWS Private Subnet & NAT Gateway:** VLAN 10 서버들이 외부 업데이트를 받기 위해 NAT Gateway를 통과할 경우, 시간당 약 **$0.045**의 기본료와 데이터 처리량(GB당)에 따른 **유료 비용**이 발생합니다.
+* **VPC Endpoint (Interface):** 내부 보안을 위해 인터넷망을 타지 않고 AWS 서비스(S3, DynamoDB 등)에 직접 연결할 경우, 엔드포인트 유지 시간당 비용이 청구됩니다.
+* **AWS Config:** 각 서브넷(VLAN)의 설정 변경 사항을 기록하고 규정 준수 여부를 모니터링할 경우, 기록되는 항목당 과금됩니다.
+
+**Next Level : 액세스 스위치 보안을 위한 포트 보안(Port-Security) 및 SNMP 모니터링 설정**
+
+VLAN 10 설정 | BPDU Guard | 포트 이중화 | 관리 IP 할당
