--- a/0100.본사-지사네트워크프로젝트.md
+++ b/0100.본사-지사네트워크프로젝트.md
@@ -339,7 +339,97 @@ ip route 192.168.0.0 255.255.0.0 172.16.1.2 20 ! 내부 백본 A 방향 (백업)
 * **AWS NAT Gateway:** 본 설정의 NAT 기능을 수행하며, 시간당 약 **$0.045** 및 GB당 데이터 처리 비용이 발생합니다.
 * **Public IPv4 Address:** AWS에서 할당받는 공인 IP는 인스턴스 실행 여부와 상관없이 시간당 비용이 청구될 수 있습니다. (최근 정책 변경으로 사용 중인 IP도 과금 대상)
 * **Data Transfer Out:** 인터넷으로 나가는 트래픽(Egress)은 데이터 양에 따라 월별 청구됩니다.
+---
+패킷트레이서 환경에서 실제 인터넷 대역인 `8.8.8.8`로 핑 테스트를 수행하려면, 인터넷 라우터 A와 B 상위에 **ISP 역할을 수행할 라우터**와 공인 DNS 서버 역할을 할 **서버 객체**가 필요합니다.
 
+---
+
+## 외부 인터넷(ISP) 시뮬레이션 구성표
+
+| 계층 | 장비 명칭 | 인터페이스 IP | 비고 |
+| --- | --- | --- | --- |
+| **외부 서버** | **Google DNS Server** | 8.8.8.8 /24 | 최종 목적지 (Ping 대상) |
+| **최상위 ISP** | **ISP-Cloud-Router** | G0/0: 8.8.8.254, G0/1: 211.100.10.254, G0/2: 218.200.20.254 | ISP 공인망 게이트웨이 |
+| **본사 엣지** | **인터넷 라우터 A/B** | G0/0: 211.100.10.1 / 218.200.20.1 | 본사 공인 IP 종단 |
+
+---
+
+## ISP 및 외부망 환경설정 가이드
+
+### 1. ISP-Cloud-Router 설정 (최상위 라우터)
+
+본사 인터넷 라우터 A, B와 연결되는 접점이며, `8.8.8.8` 서버로 트래픽을 넘겨주는 역할을 합니다.
+
+```bash
+hostname ISP-Cloud
+!
+interface GigabitEthernet0/0
+ description Link_to_Google_Server
+ ip address 8.8.8.254 255.255.255.0
+ no shutdown
+!
+interface GigabitEthernet0/1
+ description Link_to_HQ_Router_A
+ ip address 211.100.10.254 255.255.255.0
+ no shutdown
+!
+interface GigabitEthernet0/2
+ description Link_to_HQ_Router_B
+ ip address 218.200.20.254 255.255.255.0
+ no shutdown
+!
+! --- 내부망으로 돌아오는 경로 설정 (매우 중요) ---
+! 공인 IP 대역인 211.100.10.0 및 218.200.20.0은 직접 연결되어 있으므로 추가 라우팅 불필요
+
+```
+
+### 2. Google DNS Server 설정 (End Device)
+
+패킷트레이서의 'Server' 객체를 꺼내 ISP 라우터의 G0/0 포트에 연결합니다.
+
+* **IP Configuration:**
+* **IP Address:** 8.8.8.8
+* **Subnet Mask:** 255.255.255.0
+* **Default Gateway:** 8.8.8.254
+
+
+* **Services:**
+* ICMP 응답을 위해 별도의 서비스 활성화는 필요 없으나, `DNS Service`를 ON으로 설정하여 테스트할 수도 있습니다.
+
+
+
+---
+
+## 핑 테스트를 위한 본사 라우터(A, B) 추가 설정
+
+이미 NAT 설정이 되어 있다면, 외부 ISP 게이트웨이로 향하는 기본 경로가 정확히 잡혀 있는지 확인해야 합니다.
+
+* **인터넷 라우터 A:** `ip route 0.0.0.0 0.0.0.0 211.100.10.254`
+* **인터넷 라우터 B:** `ip route 0.0.0.0 0.0.0.0 218.200.20.254`
+
+---
+
+## 테스트 방법 및 트러블슈팅
+
+1. **Direct Ping:** 인터넷 라우터 A의 CLI에서 `ping 8.8.8.8`을 수행하여 ISP 구간 통신을 확인합니다.
+2. **Internal Ping:** 내부 VLAN 10번 PC에서 `ping 8.8.8.8`을 수행합니다.
+* **실패 시 확인 사항:** 인터넷 라우터 A/B에서 `ip nat inside source...` 설정이 누락되었는지 확인하십시오. 외부 ISP 라우터는 내부 사설 주소(`192.168.x.x`)로 돌아오는 경로를 모르기 때문에 NAT가 필수입니다.
+
+
+
+---
+
+### AWS 도입 시 유료 과금 항목 안내
+
+외부 ISP 및 서버망을 AWS로 모니터링하거나 연동할 때 발생하는 **유료 항목**입니다.
+
+* **Amazon Route 53 Health Checks:** 외부 IP(8.8.8.8 등)에 대해 가용성 체크를 수행할 경우 엔드포인트당 월별 **유료 비용**이 발생합니다.
+* **AWS CloudWatch Synthetics:** 실제 사용자 시나리오로 외부 핑 테스트 및 웹 접속 테스트를 자동화할 경우, 카나리(Canary) 실행 횟수에 따라 과금됩니다.
+* **Data Transfer Out (Egress):** 내부에서 외부망으로 나가는 모든 데이터 전송량은 GB당 비용이 청구됩니다.
+
+**Next Level : 외부 구간 패킷 분석을 위한 Wireshark 활용 및 방화벽 정책**
+
+ISP 라우터 설정 | DNS 서버 구성 | 기본 게이트웨이 | NAT Overload 확인
 ---
 본사에서 지사로 연결되는 통로인 본사-지사 연결용 라우터와 실제 지사 현장에 설치된 라우터 및 스위치의 설정입니다. 본사와 지사는 `172.16.3.0/24` 대역을 통해 연결되며, 지사 내부는 VLAN 150~180을 통해 각 부서망이 독립적으로 운영됩니다.
 
