--- a/0100.본사-지사네트워크프로젝트.md
+++ b/0100.본사-지사네트워크프로젝트.md
@@ -772,3 +772,65 @@ ip default-gateway 192.168.10.1
 **Next Level : 액세스 스위치 보안을 위한 포트 보안(Port-Security) 및 SNMP 모니터링 설정**
 
 VLAN 10 설정 | BPDU Guard | 포트 이중화 | 관리 IP 할당
+---
+패킷트레이서의 **Cloud(PT-Cloud)** 객체를 사용하여 `8.8.8.8` 핑 테스트를 구현하는 것도 가능합니다. 하지만 단순히 선만 연결한다고 동작하는 것이 아니라, 클라우드 내부를 하나의 **'거대한 ISP 스위치'**처럼 동작하게 만드는 인터페이스 매핑 설정이 필요합니다.
+
+---
+
+## Cloud 객체를 이용한 ISP 시뮬레이션 구성표
+
+| 구분 | 장비/객체 | 설정 및 역할 |
+| --- | --- | --- |
+| **목적지** | **Server (8.8.8.8)** | Cloud의 한 포트에 연결되어 외부 인터넷 서버 역할 수행 |
+| **ISP망** | **Cloud (PT-Cloud)** | 내부에서 라우터 A, B와 Server 사이를 이어주는 가상 통로 |
+| **본사 엣지** | **인터넷 라우터 A, B** | Cloud의 각기 다른 포트에 연결되어 외부와 통신 |
+
+---
+
+## Cloud 및 서버 설정 가이드
+
+단순히 구름 모양 아이콘을 배치하는 것만으로는 라우팅이 일어나지 않으므로 아래 단계를 반드시 수행해야 합니다.
+
+### 1. Cloud 내부 인터페이스 설정 (Config 탭)
+
+Cloud 객체는 기본적으로 L2 계층처럼 동작합니다. 서로 다른 포트가 동일한 네트워크 대역(공인 IP 대역)에 있다고 가정하고 설정을 맞춥니다.
+
+* **연결 확인:** 인터넷 라우터 A가 Cloud의 `Ethernet6`에, 서버가 `Ethernet7`에 연결되었다면, 두 포트가 같은 VLAN 혹은 브리지 상태인지 확인합니다. (패킷트레이서 기본 설정은 통신이 가능하도록 열려 있습니다.)
+
+### 2. 외부 서버(8.8.8.8) 설정
+
+서버 객체를 클릭하고 다음을 입력합니다.
+
+* **IP Address:** `8.8.8.8`
+* **Subnet Mask:** `255.0.0.0` (또는 255.255.255.0)
+* **Default Gateway:** 이 서버가 응답을 돌려보낼 게이트웨이 IP가 필요합니다.
+* *주의:* Cloud는 라우터가 아니기 때문에 직접 게이트웨이가 될 수 없습니다. 따라서 보통 **ISP 역할을 하는 라우터를 Cloud와 서버 사이에 하나 더 두는 것**이 실제 물리 환경과 가장 유사합니다.
+
+
+
+### 3. 왜 라우터 없이 '구름'만 쓰면 설정이 복잡한가?
+
+* **라우팅의 부재:** 구름(Cloud)은 단순히 선을 모아주는 역할입니다. `8.8.8.8`이라는 IP가 어디에 있는지 알려주는 '이정표(Routing Table)'가 구름 안에는 없습니다.
+* **결론:** 핑 테스트를 성공시키려면 **[인터넷 라우터 A] --- [Cloud] --- [ISP 라우터] --- [Server 8.8.8.8]** 순서로 배치하는 것이 가장 정확합니다. 이때 Cloud는 단순한 전선 뭉치(Frame Relay 또는 DSL/Cable 모뎀 구간) 역할을 하게 됩니다.
+
+---
+
+## 핑 테스트 성공을 위한 필수 체크리스트
+
+1. **NAT 설정 확인:** 본사 내부 PC에서 핑을 쏠 경우, 인터넷 라우터 A/B에서 공인 IP로의 주소 변환(NAT)이 반드시 일어나야 합니다.
+2. **Default Route:** 인터넷 라우터 A에서 `ip route 0.0.0.0 0.0.0.0 [ISP측 IP]` 설정이 되어 있어야 합니다.
+3. **Return Path:** 외부 서버나 ISP 라우터가 다시 본사의 공인 IP 대역(`211.100.10.0` 등)으로 돌아오는 길을 알고 있어야 합니다.
+
+---
+
+### AWS 도입 시 유료 과금 항목 안내
+
+클라우드 시뮬레이션 환경을 실제 AWS 환경으로 옮길 때 발생하는 **유료 항목**입니다.
+
+* **AWS Internet Gateway (IGW):** VPC와 인터넷 사이의 관문입니다. 생성은 무료이나 이를 통과하는 **Data Transfer Out** 비용은 유료입니다.
+* **BYOIP (Bring Your Own IP):** 실제 사용 중인 공인 IP 대역을 AWS로 가져와 사용할 때, 특정 조건에 따라 설정 및 유지 비용이 발생할 수 있습니다.
+* **Amazon VPC Reachability Analyzer:** 두 지점(예: 인스턴스와 IGW) 간의 통신 가능 여부를 분석할 때 분석 1회당 비용이 발생합니다.
+
+**Next Level : Cloud 객체를 활용한 Frame-Relay 및 서브인터페이스 설정**
+
+Cloud 포트 매핑 | 외부 서버 IP 설정 | NAT 주소 변환 | 패킷 경로 추적(Tracert)
