--- a/모범답안0010.인터넷2중화1.md
+++ b/모범답안0010.인터넷2중화1.md
@@ -1,5 +1,10 @@
 ## AWS 하이브리드 클라우드 연동을 위한 최종 표준 네트워크 설계
 
+
+<img width="1298" height="833" alt="image" src="https://github.com/user-attachments/assets/2f288d07-e77e-47a3-b706-87aaa6dba524" />
+
+
+
 업로드하신 마지막 이미지(`image_5f2424.png`)는 각 장비 간의 연결 구간을 독립된 서브넷으로 완벽히 분리하면서도, 3단계 계층 구조(Core-Distribution-Access)에 맞는 일관된 IP 규칙을 적용한 최적의 설계입니다. 이 구성은 향후 AWS Site-to-Site VPN을 통해 온프레미스와 클라우드를 연결할 때 라우팅 경로를 가장 명확하게 제어할 수 있는 구조입니다.
 
 ---
