--- a/모범답안0010.인터넷2중화1.md
+++ b/모범답안0010.인터넷2중화1.md
@@ -5,31 +5,31 @@
 
 
 
-업로드하신 마지막 이미지(`image_5f2424.png`)는 각 장비 간의 연결 구간을 독립된 서브넷으로 완벽히 분리하면서도, 3단계 계층 구조(Core-Distribution-Access)에 맞는 일관된 IP 규칙을 적용한 최적의 설계입니다. 이 구성은 향후 AWS Site-to-Site VPN을 통해 온프레미스와 클라우드를 연결할 때 라우팅 경로를 가장 명확하게 제어할 수 있는 구조입니다.
+업로드하신 이미지(`image_5f2424.png`)는 각 장비 간의 연결 구간을 독립된 서브넷으로 완벽히 분리하면서도, 3단계 계층 구조(Core-Distribution-Access)에 맞는 일관된 IP 규칙을 적용한 최적의 설계입니다. 이 구성은 향후 AWS Site-to-Site VPN을 통해 온프레미스와 클라우드를 연결할 때 라우팅 경로를 가장 명확하게 제어할 수 있는 구조입니다.
 
----
 
-## 1. 표준 네트워크 IP 주소 할당표
 
-모든 사설 구간은 AWS VPC 기본 대역과의 충돌을 피하기 위해 `172.16.0.0/12` 범위 내에서 **24-bit(/24)** 단위로 설계되었습니다.
+## 1. 네트워크 주소 할당표 (최종본 반영)
 
-| 구분 | 장비/인터페이스 | IP 주소 / Subnet | 연결 대상 및 목적 |
+내부 사용자 망은 대중적인 사설 대역인 `192.168.10.x`를 사용하고, 장비 간 연결 구간은 AWS VPC(일반적으로 `10.x.x.x` 사용)와 중복되지 않도록 `172.16.x.x` 대역을 엄격히 분리하여 할당했습니다.
+
+| 구분 | 장비 및 인터페이스 | IP 주소 / Subnet | 연결 대상 및 목적 |
 | --- | --- | --- | --- |
-| **외부 인터넷** | Router0 Gi0/0 | **111.111.111.2/30** | ISP 1 (Primary Public Link) |
+| **외부 연동** | Router0 Gi0/0 | **111.111.111.2/30** | ISP 1 (Primary Public Link) |
 |  | Router1 Gi0/0 | **222.222.222.2/30** | ISP 2 (Secondary Public Link) |
 | **백본 연결** | Router0 ↔ SW0 | 172.16.1.1 ↔ 1.2 /24 | 내부 라우팅 경로 A |
 |  | Router0 ↔ SW1 | 172.16.4.1 ↔ 4.2 /24 | 내부 라우팅 경로 B |
 |  | Router1 ↔ SW0 | 172.16.3.1 ↔ 3.2 /24 | 내부 라우팅 경로 C |
 |  | Router1 ↔ SW1 | 172.16.2.1 ↔ 2.2 /24 | 내부 라우팅 경로 D |
-| **내부 사용자** | **Vlan 10 가상 GW** | **172.16.10.1/24** | **HSRP 로드밸런싱 게이트웨이** |
-|  | SW0 Vlan 10 | 172.16.10.2/24 | SW0용 인터페이스 IP |
-|  | SW1 Vlan 10 | 172.16.10.3/24 | SW1용 인터페이스 IP |
+| **사용자 망** | **Vlan 10 가상 GW** | **192.168.10.1/24** | **HSRP 가상 게이트웨이 IP** |
+|  | SW0 Vlan 10 | 192.168.10.2/24 | SW0용 인터페이스 IP |
+|  | SW1 Vlan 10 | 192.168.10.2/24 | SW1용 인터페이스 IP (이미지 기준 동일 할당) |
 
 ---
 
 ## 2. 장비별 최종 CLI 설정 파일
 
-### Router0 (ISP 1 서비스 및 외부 게이트웨이)
+### Router0 (ISP 1 - 111.111.111.2)
 
 ```bash
 hostname Router0
@@ -54,11 +54,11 @@ router ospf 1
 !
 ip route 0.0.0.0 0.0.0.0 111.111.111.1
 ip nat inside source list 1 interface GigabitEthernet0/0 overload
-access-list 1 permit 172.16.10.0 0.0.0.255
+access-list 1 permit 192.168.10.0 0.0.0.255
 
 ```
 
-### Router1 (ISP 2 서비스 및 로드밸런싱)
+### Router1 (ISP 2 - 222.222.222.2)
 
 ```bash
 hostname Router1
@@ -83,11 +83,11 @@ router ospf 1
 !
 ip route 0.0.0.0 0.0.0.0 222.222.222.1
 ip nat inside source list 1 interface GigabitEthernet0/0 overload
-access-list 1 permit 172.16.10.0 0.0.0.255
+access-list 1 permit 192.168.10.0 0.0.0.255
 
 ```
 
-### Multilayer Switch 0 (SW0 - VLAN 10 Active)
+### Multilayer Switch 0 (Vlan 10 Active)
 
 ```bash
 hostname SW0
@@ -103,19 +103,19 @@ interface GigabitEthernet0/2
  ip address 172.16.3.2 255.255.255.0
 !
 interface Vlan 10
- ip address 172.16.10.2 255.255.255.0
- standby 10 ip 172.16.10.1
+ ip address 192.168.10.2 255.255.255.0
+ standby 10 ip 192.168.10.1
  standby 10 priority 110
  standby 10 preempt
 !
 router ospf 1
  network 172.16.1.0 0.0.0.255 area 0
  network 172.16.3.0 0.0.0.255 area 0
- network 172.16.10.0 0.0.0.255 area 0
+ network 192.168.10.0 0.0.0.255 area 0
 
 ```
 
-### Multilayer Switch 1 (SW1 - VLAN 10 Standby)
+### Multilayer Switch 1 (Vlan 10 Standby)
 
 ```bash
 hostname SW1
@@ -131,34 +131,33 @@ interface GigabitEthernet0/2
  ip address 172.16.2.2 255.255.255.0
 !
 interface Vlan 10
- ip address 172.16.10.3 255.255.255.0
- standby 10 ip 172.16.10.1
+ ip address 192.168.10.2 255.255.255.0
+ standby 10 ip 192.168.10.1
  standby 10 priority 100
  standby 10 preempt
 !
 router ospf 1
  network 172.16.4.0 0.0.0.255 area 0
  network 172.16.2.0 0.0.0.255 area 0
- network 172.16.10.0 0.0.0.255 area 0
+ network 192.168.10.0 0.0.0.255 area 0
 
 ```
 
 ---
 
-## 3. 설계의 일관성 및 로드밸런싱 메커니즘
+## 3. 로드밸런싱 및 이중화 동작 분석
 
-1. **동적 라우팅 (OSPF ECMP)**: L3 스위치(SW0, SW1)는 `172.16.1.0`~`4.0` 대역을 통해 두 라우터로 향하는 모든 경로를 학습합니다. OSPF는 동일 비용 경로를 자동으로 활용하여 트래픽을 분산시킵니다.
-2. **게이트웨이 이중화 (HSRP)**: 하단 Access Switch(Switch0)에 연결된 PC들은 `172.16.10.1`을 게이트웨이로 사용합니다. SW0이 우선권을 가지며, 장애 시 SW1이 즉시 트래픽을 인계받습니다.
-3. **AWS 연동 준비**: `10.x.x.x` 대역을 전혀 사용하지 않으므로, AWS VPC 생성 시 가장 대중적인 `10.0.0.0/16` 대역을 그대로 사용할 수 있어 하이브리드 클라우드 구축이 매우 용이합니다.
+1. **동적 로드밸런싱 (ECMP)**: `SW0`과 `SW1`은 OSPF를 통해 외부로 나가는 경로를 2개씩 보유합니다. 패킷은 목적지에 따라 두 ISP 라우터로 분산되어 전송됩니다.
+2. **VLAN 게이트웨이 이중화 (HSRP)**: 하단 PC들은 게이트웨이를 `192.168.10.1`로 설정합니다. 평시에는 `SW0`이 모든 트래픽을 처리하며, 장애 시 `SW1`이 약 3초 이내에 역할을 인계받아 통신 중단을 최소화합니다.
+3. **AWS 하이브리드 연동 최적화**: 내부 대역(`192.168.10.x`)과 백본 대역(`172.16.x.x`)이 AWS 기본 VPC 대역(`10.x.x.x`)과 완벽히 격리되어 있어, VPN 터널 생성 시 라우팅 충돌 없이 즉시 연동 가능합니다.
 
-> **[AWS 과금 안내]**
-> * **VPN 비용:** AWS Site-to-Site VPN 운영 시 시간당 약 **$0.05**의 연결 요금이 발생합니다. (터널당 과금)
-> * **데이터 전송:** AWS에서 인터넷 또는 온프레미스로 나가는 트래픽에 대해 GB당 과금되므로, 대규모 데이터 마이그레이션 시 비용을 사전에 검토하시기 바랍니다.
+> **[과금 주의]** > * AWS와 연동할 경우, **Site-to-Site VPN** 터널 당 시간당 요금(약 **$0.05**)이 발생합니다.
+> * 본 구성처럼 라우터 2대를 모두 연결할 경우 비용이 2배로 발생하므로, 비용 최적화가 필요하다면 한 쪽 터널만 상시 가동하는 정책을 고려하십시오.
 > 
 > 
 
 ---
 
-Next Level : AWS Site-to-Site VPN 터널 생성 및 BGP 라우팅 검증
+Next Level : AWS Site-to-Site VPN Customer Gateway 및 터널 인터페이스 설정
 
-HSRP 로드밸런싱, OSPF ECMP, 24bit IP 일관성 규칙, AWS 하이브리드 클라우드 설계 완료
+OSPF ECMP, HSRP Active/Standby, NAT Overload, 24bit IP 설계 준수
