--- a/모범답안0010.인터넷2중화1.md
+++ b/모범답안0010.인터넷2중화1.md
@@ -32,6 +32,9 @@
 
 ### Router0 (ISP 1 - 111.111.111.2)
 
+백본에 2개 라우터를 붙여 인터넷 이중화 한 자주 쓰이는 사례 중 하나에요.
+두 라우터 아래 스위치를 넣고 DMZ 구간을 만드는 사례도 많습니다. 
+
 ```bash
 hostname Router0
 !
@@ -48,6 +51,8 @@ interface GigabitEthernet0/2
  ip address 172.16.4.1 255.255.255.0
  ip nat inside
 !
+!현장에서 로드밸런스 보다 OSPF 프로토콜로 단순화 해요.
+!하지만 네트워크가 많아지면 에어리어수가 많아지고 오버헤드(버거워지는)가 커지는 단점이 있어요.
 router ospf 1
  network 172.16.1.0 0.0.0.255 area 0
  network 172.16.4.0 0.0.0.255 area 0
@@ -55,6 +60,7 @@ router ospf 1
 !
 ip route 0.0.0.0 0.0.0.0 111.111.111.1
 ip nat inside source list 1 interface GigabitEthernet0/0 overload
+! overload는 헤더에 port를 오버로드해서 매핑테이블을 만들겠다는 의미로 제일 중요해요.
 access-list 1 permit 192.168.10.0 0.0.0.255
 
 ```
